--- a/public_html/stylesheets/main.css
+++ b/public_html/stylesheets/main.css
@@ -99,3 +99,11 @@ a:hover{
 a:visited{
 	color:#3074a1;
 }
+
+.day20canvas{
+	display:block;
+  margin:0 auto 0;
+  margin-top:20px;
+  border:1px dashed gray;
+  border-radius:15px;
+}
